airsonic-main/src/main/webapp/style/booksonic.css
@import "default-without-mediaelement.css";
@import "mediaelement-light.css";
@import "bridge.css";

.upper{
    background-color: #175d7b !important;
    min-height: 75px !important;
    border-bottom: 2px solid #3b474c !important;
}
.topHeader a{
	color: #fff !important;
}

.logo {
    margin: -5px 10% 0px 0px;
    color: #fff;
    padding: 10px 0px 15px 45px;
    font: 30px/1.5 Lato, sans-serif;
    font-weight: bold;
    font-style: italic;
    float: left;
}

.coverart{
	border-radius: 0px !important;
	border: 1px solid #aaa;
}
.navli{
    display: inline;
    float: left;
    padding-right: 35px;
    margin-top: 15px;
}
.navli a{
	color: #fff;
    font: 14px/1.5 Lato, sans-serif;
}
.mainframe{
	padding-top: 15px;
}

#right{
    width: -moz-available;
    width: -webkit-fill-available;
}

